fix: file inside jar is not visible and update application.properties
use resource.getInputStream() instead